Correction collapse+about+detail + dans detail : tag, loc, titre - reste : collapse ouverts, host, carrousel

--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -9,4 +9,5 @@
   flex-direction: column;
   margin-bottom: 30px;
   width: 100%;
+  gap: 30px;
 }
